  * Add static-file.disable-pathinfo option to prevent handling of urls like .../secret.php/image.jpg as static file
  * Don't overwrite 401 (auth required) with 501 (unknown method) (fixes #2341)
  * Fix mod_status bug: always showed "0/0" in the "Read" column for uploads (fixes #2351)
  * [mod_auth] Fix signedness error in http_auth (fixes #2370, CVE-2011-4362)

- 1.4.29 - 2011-07-03
  * Fix mod_proxy waiting for response even if content-length is 0 (fixes #2259)
  * Silence annoying "connection closed: poll() -> ERR" error.log message (fixes #2257)
  * mod_cgi: make read buffer as big as incoming data block
  * [build] Fix detection of libev (fixes #2300)
  * ssl: Support for Diffie-Hellman and Elliptic-Curve Diffie-Hellman key exchange (fixes #2301)
         add ssl.use-sslv3 (fixes #2246)
         load all algorithms (fixes #2239)
  * [ssl/md5] prefix our own md5 implementation with li_ so it doesn't conflict with the openssl one (fixes #2269)
  * [ssl/build] some minor fixes; fix compile without ssl, cleanup ssl config buffers
  * [proc,include_shell] log error if exec shell fails (fixes #2280)
  * [*cgi] Use physical base dir (alias, userdir) as DOCUMENT_ROOT in cgi environments (fixes #2216)
  * [doc] Move docs to outdated/ subdir and refer to wiki instead (fixes #2248)
  * fdevent: add solaris eventports (fixes #2171)

- 1.4.28 - 2010-08-22
  * Rename fdevent_event_add to _set to reflect what the function does. Fix some handlers. (fixes #2249)
  * Fix buffer.h to include stdio.h as it is needer for SEGFAULT() (fixes #2250)

- 1.4.27 - 2010-08-13
  * Fix handling return value of SSL_CTX_set_options (fixes #2157, thx mlcreech)
  * Fix mod_proxy HUP handling (send final chunk, fix usage counter)
  * mod_proxy: close connection on write error (fixes #2114)
  * Check uri instead of physical path for directory redirect
  * Fix detecting git repository (fixes #2173, thx ncopa)
  * [mod_compress] Fix segfault when etags are disabled (fixes #2169)